added timezone handling in statistics
